--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="wrapper">
+        <h1>Odin Recipes</h1>
     
-    <ul>
-        <li><a href="recipes/margarita.html">Margherita</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/carbonara.html">Carbonara</a></li>
-    </ul>
+        <ul>
+            <li><a href="recipes/margarita.html">Margherita</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/carbonara.html">Carbonara</a></li>
+        </ul>
+    </div>
 </body>
 </html>
